--- a/sprint2/web/src/main/resources/templates/index.html
+++ b/sprint2/web/src/main/resources/templates/index.html
@@ -100,13 +100,13 @@
 
 
 <div class="container text-center">
-	<div class="row">
+	<div class="row align-items-center" style="padding-bottom: 50px">
 		<div class="col">
 			<p>A completely free parking service, gently offered by the University of Bologna</p>
 
 		</div>
 		<div class="col">
-			<img src="images/parkingArea.jpg" class="img-responsive" style="width:50%" alt="Image">
+			<img src="images/parkingArea.jpg" class="img-responsive" style="width:50%; max-width: 220px; min-width: 100px;" alt="Image">
 		</div>
 	</div>
 	<div class="row">
