--- a/sprint2/web/src/main/resources/templates/manager.html
+++ b/sprint2/web/src/main/resources/templates/manager.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
 	<style>
 
         /* Add a gray background color and some padding to the footer */
@@ -13,11 +14,28 @@
             background-color: #e3f2f2;
             padding: 25px;
         }
+		.mygrid {
+			border-style: solid;
+			border-width: 1px;
+			border-color: lightblue;
+		}
+		html, body {
+			height: 100%;
+		}
 	</style>
+	<script th:inline="javascript">
+		var TMAX = [[${TMAX}]];
+	</script>
 	<script>
+		var myModal = null;
 		$(function () {
-			$("#controlTrolley").on("click", function () {
-				let state = "stopped"
+			myModal = new bootstrap.Modal(document.getElementById('alertTemperature'));
+			$("#divStopTrolley").prop("title", "You can stop the trolley only if the temperature is over "+TMAX);
+			$("#infoTemperature").prop("title", "The temperature inside the parking area. The maximum recommended value is "+TMAX);
+			$("#infoFanState").prop("title", "Current state of the fan. Can be ON or OFF. It activates automatically when the temperature is over "+TMAX);
+			$("#infoTrolleyState").prop("title", "Current state of the transport trolley. Can be IDLE, WORKING, STOPPED");
+			$("#stopTrolley,#startTrolley").on("click", function (e) {
+				let state = (e.target.id === "stopTrolley") ? "stopped" : "working";
 				$.post("/api/manager/setTrolley/"+state, function (response) {
 					let data = $.parseJSON(response);
 					if(data.ok) {
@@ -27,25 +45,47 @@
 					}
 				});
 			});
+			//Set tooltip
+			var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+			var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+				return new bootstrap.Tooltip(tooltipTriggerEl)
+			})
+
+			//Set modal
+			/*var myModal = document.getElementById('myModal')
+			var myInput = document.getElementById('myInput')
+
+			myModal.addEventListener('shown.bs.modal', function () {
+				myInput.focus()
+			})*/
 		});
 		updateRecursive();
 		function update() {
 			$.getJSON("/api/manager/status", function (data) {
 				console.log(data);
 				if(data.trolleyState === "STOPPED") {
-					$("#controlTrolley").text("START");
-					$("#controlTrolley").prop("data-action", "working");
+					$("#stopTrolley").prop("disabled", true);
+					$("#startTrolley").prop("disabled", false);
 				} else {
-					$("#controlTrolley").text("STOP");
-					$("#controlTrolley").prop("data-action", "stopped");
+					$("#stopTrolley").prop("disabled", data.sensors.temperature.measure <= TMAX);
+					$('#divStopTrolley').tooltip(data.sensors.temperature.measure > TMAX ? 'disable' : 'enable');
+					$("#startTrolley").prop("disabled", true);
 				}
 				$("#fanState").text(data.fanState);
+				$("#trolleyState").text(data.trolleyState);
+				$("#lastUpdate").text(getTime(data.sensors.temperature.time));
 				$("#temperatureState").text(data.sensors.temperature.measure);
-				$("#temperatureStateTime").text(getTime(data.sensors.temperature.time));
+				if(data.sensors.temperature.measure > TMAX)
+					$("#temperatureState").css("color", "red");
+				else
+					$("#temperatureState").css("color", "black");
+				//$("#temperatureStateTime").text(getTime(data.sensors.temperature.time));
 				if(data.outdoorAlarm) {
 					$("#dtfree").show();
+					myModal.show();
 				} else {
 					$("#dtfree").hide();
+					myModal.hide();
 				}
 			});
 		}
@@ -76,49 +116,69 @@
 <div class="container text-center">
 	<div class="row">
 		<div class="col">
-			<p>A completely free parking service, gently offered by the University of Bologna</p>
-
+			<img src="images/parkingArea.jpg" class="img-responsive" style="width:50%; max-width: 220px; min-width: 100px;" alt="Image">
 		</div>
+	</div>
+
+	<div class="row" style="padding-bottom: 60px">
 		<div class="col">
-			<img src="images/parkingArea.jpg" class="img-responsive" style="width:20%" alt="Image">
+			<h3>Manager view</h3>
 		</div>
 	</div>
-	<div class="row">
 
-	</div>
 	<div class="row" id="temperature">
-		<div class="col">
-			Current temperature inside the parking area is
+		<div class="col mygrid">
+			Current temperature <i id="infoTemperature" class="bi bi-info-circle" data-bs-toggle="tooltip" data-bs-placement="top"></i>
 		</div>
-		<div class="col">
-			<span id="temperatureState"></span>
-			<span id="temperatureStateTime"></span>
-			<!-- anche last update -->
+		<div class="col mygrid">
+			<span id="temperatureState"></span>°C
+<!--			<br><span id="temperatureStateTime"></span>-->
 		</div>
 	</div>
+
 	<div class="row" id="fan">
-		<div class="col">
-			Current fan state is
+		<div class="col mygrid">
+			Fan state <i id="infoFanState" class="bi bi-info-circle" data-bs-toggle="tooltip" data-bs-placement="top"></i>
 		</div>
-		<div class="col">
+		<div class="col mygrid">
 			<span id="fanState"></span>
 			<!-- anche last update -->
 		</div>
 	</div>
 	<div class="row" id="trolley">
-		<div class="col">
-			To control the parking trolley
+		<div class="col mygrid">
+			Trolley state <i id="infoTrolleyState" class="bi bi-info-circle" data-bs-toggle="tooltip" data-bs-placement="top"></i>
 		</div>
-		<div class="col">
-			<button type="button" class="btn btn-primary" id="controlTrolley" data-action="">Stop/start</button>
+		<div class="col mygrid">
+			<span id="trolleyState"></span>
 		</div>
 	</div>
-	<div class="row" id="dtfree" style="display: none">
+	<div class="row">
+		<div class="col mygrid">
+			Last update
+		</div>
+		<div class="col mygrid">
+			<span id="lastUpdate"></span>
+		</div>
+	</div>
+
+	<div class="row" id="dtfree" style="display: none; color: red; font-weight: bold">
 		<div class="col">
 			Alert OUTDOOR ON
 		</div>
 		<div class="col">
 			CHECK IMMEDIATELY!!!!
+		</div>
+	</div>
+
+	<div class="row" style="padding-top: 25px">
+		<div class="col">
+			<span id="divStopTrolley" data-bs-toggle="tooltip" data-bs-placement="top">
+				<button type="button" class="btn btn-primary" id="stopTrolley" data-action="" disabled="disabled">Stop trolley</button>
+			</span>
+		</div>
+		<div class="col">
+			<button type="button" class="btn btn-primary" id="startTrolley" data-action="" disabled="disabled">Start trolley</button>
 		</div>
 	</div>
 </div><br>
@@ -130,6 +190,24 @@
 		By Giulio Tripi <a style="color: grey" href="mailto:giulio.tripi@studio.unibo.it">giulio.tripi@studio.unibo.it</a><br>
 		GitHub: <a style="color: grey" href="https://github.com/giuliotripi/ParkManagerService">https://github.com/giuliotripi/ParkManagerService</a></p>
 </footer>
+
+<div class="modal" tabindex="-1" id="alertTemperature">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Outdoor alarm</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<p>A car was left in front of OUTDOOR for a time greater than DTFREE.</p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
