--- a/sprint4/web/src/main/resources/templates/index.html
+++ b/sprint4/web/src/main/resources/templates/index.html
@@ -28,14 +28,55 @@
 		#tokenid {
 			font-weight: bold;
 		}
+
+        /* Start by setting display:none to make this hidden.
+		   Then we position it in relation to the viewport window
+		   with position:fixed. Width, height, top and left speak
+		   for themselves. Background we set to 80% white with
+		   our animation centered, and no-repeating */
+		.loadingmodal {
+			display:    none;
+			position:   fixed;
+			z-index:    1000;
+			top:        0;
+			left:       0;
+			height:     100%;
+			width:      100%;
+			background: rgba( 255, 255, 255, .8 )
+			url('http://i.stack.imgur.com/FhHRx.gif')
+			50% 50%
+			no-repeat;
+
+			text-align: center;
+		}
+
+		/* When the body has the loading class, we turn
+		   the scrollbar off with overflow:hidden */
+		body.loading .loadingmodal {
+			overflow: hidden;
+		}
+
+		/* Anytime the body has the loading class, our
+		   modal element will be visible */
+		body.loading .loadingmodal {
+			display: block;
+		}
+
+		.loadinginfo {
+			display: inline-block;
+			vertical-align: middle;
+			line-height: normal;
+		}
 	</style>
 	<script>
 		$(function () {
 			$("#book").on("click", function () {
 				$("#book").prop("disabled", true);
+				showWaiting();
 				$.post("/api/enterRequest", function (response) {
 					let data = $.parseJSON(response);
 					$("#book").prop("disabled", false);
+					$("body").removeClass("loading");
 					if(data.ok) {
 						if(data.SLOTNUM === 0) {
 							alert("No more parking slots available")
@@ -51,9 +92,11 @@
 			});
 			$("#carEnterButton").on("click", function () {
 				$("#carEnterButton").prop("disabled", true);
+				showWaiting();
 				$.post("/api/carEnter", {SLOTNUM: localStorage.getItem("SLOTNUM")}, function (response) {
 					let data = $.parseJSON(response);
 					$("#carEnterButton").prop("disabled", false);
+					$("body").removeClass("loading");
 					if(data.ok) {
 						localStorage.removeItem("SLOTNUM");
 						localStorage.setItem("TOKENID", data.TOKENID);
@@ -70,9 +113,11 @@
 			});
 			$("#pickUpButton").on("click", function () {
 				$("#pickUpButton").prop("disabled", true);
+				showWaiting();
 				$.post("/api/pickUp", {TOKENID: $("#tokenInput").val()}, function (response) {
 					let data = $.parseJSON(response);
 					$("#pickUpButton").prop("disabled", false);
+					$("body").removeClass("loading");
 					if(data.ok) {
 						alert("PickUp success");
 						localStorage.removeItem("TOKENID");
@@ -101,6 +146,10 @@
 				}
 			});
 		});
+		function showWaiting() {
+			$("body").addClass("loading");
+			$(".loadingmodal").css("line-height", (parseInt($("body").height())) + "px");
+		}
 	</script>
 </head>
 <body>
@@ -167,6 +216,9 @@
 		By Giulio Tripi <a style="color: grey" href="mailto:giulio.tripi@studio.unibo.it">giulio.tripi@studio.unibo.it</a><br>
 		GitHub: <a style="color: grey" href="https://github.com/giuliotripi/ParkManagerService">https://github.com/giuliotripi/ParkManagerService</a></p>
 </footer>
+<div class="loadingmodal"><!-- Place at bottom of page -->
+	<span class="loadinginfo">Please wait, your request will be served as soon as possible</span>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
